# Changes from Version 1.4.1 to 1.4.2 [21-Feb-2016] #

Changes to NAMESPACE to get clean build check on R-devel.

# Changes from Version 1.4.0 to 1.4.1 [20-Feb-2016] #

Add ability to specify number of CPU cores to use when running in parallel.

# Changes from Version 1.3.9 to 1.4.0 [10-Feb-2016] #

Fix a problem where saving output for a single scalar parameter broke output processing.

# Changes from Version 1.3.8 to 1.3.9 [21-Jan-2016] #

Fix a problem where nonscalar estimated parameters with missing (i.e., non-estimated) values broke the display of summary stats.

# Changes from Version 1.3.7 to 1.3.8 [13-July-2015] #

Explicitly import functions from default packages to meet new standards for building with R-devel. Change minimum required version of rjags to 3-13.

# Changes from Version 1.3.6 to 1.3.7 [11-June-2015] #

Add verbose argument to functions to allow suppression of all text output in the console as the function runs.

# Changes from Version 1.3.5 to 1.3.6 [6-May-2015] #

Change method for closing connection to clusters when running in parallel to avoid closing unrelated connections. Adjust output for jags.basic.

# Changes from Version 1.3.4 to 1.3.5 [26-Mar-2015] #

Fix problem with max.iter argument in autojags(). Clarify documentation and output for autojags().

# Changes from Version 1.3.3 to 1.3.4 [21-Mar-2015] #

Add option save.all.iter in autojags() function to combine MCMC samples from all iterative updates into final posterior.

# Changes from Version 1.3.2 to 1.3.3 [24-Feb-2015] #

Fix issue with calculating stats that sometimes occurred with a constant posterior distribution.

# Changes from Version 1.3.1 to 1.3.2 [29-Jan-2015] #

Fix error where autojags did not handle NA rhat values properly. Added more helpful warning when at least one rhat value = NA.

# Changes from Version 1.3 to 1.3.1 [15-Jan-2015] #

Minor wording changes.

# Changes from Version 1.2 to 1.3 [1-Dec-2014] #
