@@ -1,9 +1,9 @@
 Package: jagsUI
-Version: 1.4.2
-Date: 2016-2-21
+Version: 1.4.4
+Date: 2016-12-2
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
-Author: Ken Kellner <ken@kenkellner.com>
-Maintainer: Ken Kellner <ken@kenkellner.com>
+Author: Ken Kellner <contact@kenkellner.com>
+Maintainer: Ken Kellner <contact@kenkellner.com>
 Depends: R (>= 2.14.0), lattice
 Imports: rjags (>= 3-13), coda (>= 0.13), parallel, methods, stats,
         grDevices, graphics, utils
@@ -12,6 +12,6 @@ Description: A set of wrappers around 'rjags' functions to run Bayesian analyses
 License: GPL-2
 URL: https://github.com/kenkellner/jagsUI
 NeedsCompilation: no
-Packaged: 2016-02-22 02:14:12 UTC; kkellner
+Packaged: 2016-12-02 18:24:01 UTC; kkellner
 Repository: CRAN
-Date/Publication: 2016-02-22 08:04:14
+Date/Publication: 2016-12-03 09:26:01
