@@ -1,14 +1,15 @@
-c0147f245dcbf0382c656b07805cd41b *DESCRIPTION
-cf82d6167ea2a4a7cc204b6b1527e8d3 *NAMESPACE
-8107b0e3a13d877080cdf8a3ec88ba55 *NEWS
-55ca8008fba17f03c518e0b40ca2c8ac *R/autojags.R
+d75f38bc5847f2053fd59ecece307b79 *DESCRIPTION
+47173827d2e81360519c3ddc9a3ccf95 *NAMESPACE
+ab2d16d10f6dc47652fb075c9a333154 *NEWS
+cdfb599c08db23d54a3dfe2510ea58f0 *R/View.R
+bdfe494cf4882090f592c11912c727de *R/autojags.R
 198b41d88f65b07c268a9e9bb6da3ed7 *R/bindmcmc.R
 79327e368bf0caea81b18424406860d7 *R/datacheck.R
 64f00fa2c12eb0cc3a8bf94c7d39ebd7 *R/densityplot.R
-d99aa566152f675a624f1a405686c82b *R/geninits.R
-6826e1f449d111e3675d1f2bc5fd8b0c *R/getdim.R
-205541344e7e546f1637a87dd9bf9836 *R/jags.R
-5ccae37feb70f96f6ab9cdd52069f699 *R/jagsbasic.R
+776ac86a47122c5a0ea65b150d31d962 *R/geninits.R
+e8a3e803c56a7c585a438e793cc44923 *R/getdim.R
+c1ae6d5d3e3bcdefcd1c0598d2fc8450 *R/jags.R
+d3f44b52d44d804f7d26753ca0e21401 *R/jagsbasic.R
 4de66ac37d64eafc5e5884c9fab1bef8 *R/orderparams.R
 f7b1dc8b8e7d3d74c6862a6bcc51e52a *R/plot.R
 ac6f0ae941469efd43766f6fac558cf7 *R/populate.R
@@ -17,21 +18,22 @@ bd8ec22208aff51bab89c02557b501ee *R/ppcheck.R
 2a87cdf21a1a7fe6895f331fb34aa81d *R/processinput.R
 5ffe741254a5fe831414bbc90241344c *R/processoutput.R
 a53c2e10601488a112fe9252179d6cc0 *R/runmodel.R
-65a246872ae3ef68e558278ae556b753 *R/runparallel.R
+8c7347aea9580b31fb9f2f3b52909625 *R/runparallel.R
 896f8987a003af25077b5a1b8c7a9ec3 *R/setmodules.R
 81ce0cbf4204a58a944249205508eaaf *R/summary.R
 bc76f8eff942bdc248b8234e81a92ebb *R/summarymatrix.R
 da101714148e602efebee1060f1702b3 *R/testrhat.R
-2a13ffbf97544da5d8fd576415a6d581 *R/traceplot.R
+c0f39819d8c4c7d6aed9496c47f71d8c *R/traceplot.R
 d19bc3d32e4fb3a74f68605ac2e25b73 *R/translateparams.R
-05388d9c701b9e972fbb4932f770547e *R/update.R
-df2928951084ccba0d8e09a6e29e481b *R/updatebasic.R
+428d9f4de3aedac85c9dac2c99e62672 *R/update.R
+c6f58803baaf710505661c2e23886c4d *R/updatebasic.R
 038e0eae9066b4c27b7dcf37d427729f *R/whiskerplot.R
 901aa3c5fda52e8e5c487f95a028b898 *R/xyplot.R
-d90e7d574edac1e22e7157936433a99d *man/autojags.Rd
-7d733348332708e1b38d9b4e7ab10611 *man/jags.Rd
-abf56cd9460af7720ea14826d6d46205 *man/jagsbasic.Rd
-cd4fba7801eeb5322f994dbb990fc256 *man/ppcheck.Rd
-0eba457a310e06c6f57599935e4fa97f *man/traceplot.Rd
-98b607c03e9ae5d5319276859077c67a *man/update.Rd
-0294c36757384ee54003d490a567e97f *man/whiskerplot.Rd
+90886e1b481fb9740427217f0234f4a6 *man/View.Rd
+72043b74e702743ce37d3a68443616a6 *man/autojags.Rd
+6c9f1cfe6402398aa8e240e9f84827e4 *man/jags.Rd
+0911faa56ac2f5b95d841e1249581830 *man/jagsbasic.Rd
+00141e594a859b467f0c4b30f4d1b8cf *man/ppcheck.Rd
+e8352d8d6a92256f4bc324ed5740f737 *man/traceplot.Rd
+ceb959ddb8624ab2fdf68a991e249630 *man/update.Rd
+c31249558a26e7a4cba07435460e425a *man/whiskerplot.Rd
