@@ -15,7 +15,7 @@
 jags.basic(data, inits, parameters.to.save, model.file,
   n.chains, n.adapt=100, n.iter, n.burnin=0, n.thin=1,
   modules=c('glm'), parallel=FALSE, n.cores=NULL, DIC=TRUE,
-  seed=floor(runif(1,1,10000)), save.model=FALSE, verbose=TRUE)}
+  seed=as.integer(Sys.time()), save.model=FALSE, verbose=TRUE)}
 
 \arguments{
   \item{data}{A named list of the data objects required by the model, or a character vector containing the names of the data objects required by the model.}
@@ -35,7 +35,7 @@ jags.basic(data, inits, parameters.to.save, model.file,
   \item{parallel}{If TRUE, run MCMC chains in parallel on multiple CPU cores}
   \item{n.cores}{If parallel=TRUE, specify the number of CPU cores used. Defaults to total available cores or the number of chains, whichever is smaller.}
   \item{DIC}{Option to report deviance values. Defaults to TRUE.}
-  \item{seed}{Set a custom seed for the R random number generator and JAGS. The current state of the random number generator is saved in the output object.}
+  \item{seed}{Set a custom seed for the R random number generator and JAGS.}
   \item{save.model}{Returns the JAGS model as part of the output object to allow updating the model later. If TRUE, the output object will instead be a list of class \code{jagsUIbasic}. Default is false.}
   \item{verbose}{If set to FALSE, all text output in the console will be suppressed as the function runs (including most warnings).}
 }
@@ -52,5 +52,5 @@ An object of class \code{mcmc.list}, if \code{save.model=FALSE}; if \code{save.m
 }
 
 \author{ 
-  Ken Kellner \email{ken@kenkellner.com}.
+  Ken Kellner \email{contact@kenkellner.com}.
 }
