@@ -1,3 +1,11 @@
+# Changes from Version 1.4.3 to 1.4.4 [10-Nov-2016] #
+
+Change default approach to generating random seeds. Add S3 method for View() and convert traceplot() to an S3 method from S4.
+
+# Changes from Version 1.4.2 to 1.4.3 [15-Sept-2016] #
+
+Fix to allow running in parallel when dependencies are in non-standard libraries. Fix bug when updating jagsbasic class.
+
 # Changes from Version 1.4.1 to 1.4.2 [21-Feb-2016] #
 
 Changes to NAMESPACE to get clean build check on R-devel.
